# ptyx

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PHASE1.md  PHASE2.md  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml
benches/: buffer.rs  prediction.rs
docs/: 00-overview.md  01-pty-fundamentals.md  02-ssh-buffering.md  03-echo-prediction.md  04-async-patterns.md  05-terminal-control.md  06-platform-impl.md  07-pitfalls.md  08-testing.md  09-crates.md  10-roadmap.md  INDEX.md
memory/: MEMORY.md  project_phase4.md
src/: buffer.rs  config.rs  display.rs  lib.rs  main.rs  metrics.rs  persistence.rs  predict.rs  proxy.rs  pty.rs  recorder.rs  replay.rs  terminal.rs
tests/: integration_buffer.rs  integration_buffer_advanced.rs  integration_metrics.rs  integration_predict.rs  integration_proxy.rs  integration_pty.rs
tests/integration/: buffer.rs  proxy.rs  pty.rs
