[package]
name = "ptyx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptyx"
path = "src/main.rs"

[lib]
name = "ptyx"
path = "src/lib.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
nix          = { version = "0.29", features = ["fs", "process", "signal", "term"] }
libc         = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
crossterm    = "0.28"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook  = "0.3"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
clap         = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[[bench]]
name = "buffer"
harness = false
